# manifold

./: CMakeLists.txt  README.md  main.cpp  requirements.txt
include/: hpack.hpp  hpack_context.hpp  http_client.hpp  http_connection.hpp  http_error_category.hpp  http_file_transfer.hpp  http_frame.hpp  http_incoming_message.hpp  http_message.hpp  http_message_head.hpp  http_outgoing_message.hpp  http_request_head.hpp  http_response_head.hpp  http_server.hpp  http_stream_client.hpp  http_stream_dependency_tree.hpp  http_v1_connection.hpp  http_v1_header_block.hpp  http_v1_message_head.hpp  http_v1_request_head.hpp  http_v1_response_head.hpp  http_v2_connection.hpp  http_v2_message_head.hpp  http_v2_request_head.hpp  http_v2_response_head.hpp  mysql.hpp  socket.hpp  tcp.hpp  uniform_resource_identifier.hpp  user_agent.hpp
include/manifold/: future.hpp  hpack.hpp  http_client.hpp  http_connection.hpp  http_document_root.hpp  http_entity_transfer_client.hpp  http_error_category.hpp  http_file_transfer.hpp  http_frame.hpp  http_header_block.hpp  http_incoming_message.hpp  http_message.hpp  http_outgoing_message.hpp  http_request_head.hpp  http_response_head.hpp  http_router.hpp  http_server.hpp  http_stream_client.hpp  http_v1_connection.hpp  socket.hpp  uniform_resource_identifier.hpp  utility.hpp
src/: hpack.cpp  hpack_context.cpp  http_client.cpp  http_connection.cpp  http_error_category.cpp  http_file_transfer.cpp  http_frame.cpp  http_incoming_message.cpp  http_message.cpp  http_message_head.cpp  http_outgoing_message.cpp  http_request_head.cpp  http_response_head.cpp  http_router.cpp  http_server.cpp  http_stream_client.cpp  http_stream_dependency_tree.cpp  http_v1_connection.cpp  http_v1_header_block.cpp  http_v1_message_head.cpp  http_v1_request_head.cpp  http_v1_response_head.cpp  http_v2_connection.cpp  http_v2_message_head.cpp  http_v2_request_head.cpp  http_v2_response_head.cpp  socket.cpp  tcp.cpp  uniform_resource_identifier.cpp  user_agent.cpp
src/manifold/: hpack.cpp  http_client.cpp  http_connection.cpp  http_document_root.cpp  http_entity_transfer_client.cpp  http_error_category.cpp  http_file_transfer.cpp  http_frame.cpp  http_header_block.cpp  http_incoming_message.cpp  http_message.cpp  http_outgoing_message.cpp  http_request_head.cpp  http_response_head.cpp  http_router.cpp  http_server.cpp  http_stream_client.cpp  socket.cpp  uniform_resource_identifier.cpp  utility.cpp
tests/: test.cpp
